11/13/13 use same font and arrow size for volme and pH indicators
11/13/13 tweak font sizes to make things look more balanced
11/13/13 attach wire to correct location on pH meter
11/13/13 fix indicator on pH meter
11/13/13 cleanup and delete unused stuff in pH meter
11/13/13 first stab at pH meter for 'Basics' (incomplete)
11/13/13 capitalize all strings, as shown in design doc
11/13/13 create 'Basics' screen, move stuff to there
11/13/13 adjust layout to match mockups of 'Basics' screen
11/13/13 label the solvent faucet with 'water'
11/13/13 use dot.Util.toFixedNumber where appropriate, see dot#10
11/12/13 when changing solutes, set full volume to solute, zero solvent (this is potentially problematic)
11/12/13 change background to 'rgb(245,245,245)' because milk doesn't show up on 'white'
11/12/13 fix NaN error when fully draining beaker
11/12/13 replace Beaker.getLeft and getRight with properties
11/12/13 use Util.toFixed throughout
11/12/13 add volume indicator
11/12/13 show pH value in combo box items
11/12/13 temporary pH meter (concentration meter)
11/12/13 fix computation of pH, fix assertions
11/12/13 revert dropper fluid change, we need to use opaque colors
11/12/13 make dropper fluid stop at the top of the solution in the beaker
11/12/13 fix algorithm for draining solution
11/12/13 fix 'Reset All'
11/12/13 add fluid animation to model
11/12/13 add dropper fluid to view
11/12/13 solute combo box
11/12/13 make Dropper the owner of the 'solute' property
11/12/13 add dropper to view
11/12/13 add faucets to view
11/12/13 remove PropertySet from model, more trouble than it was worth
11/12/13 add beaker to view
11/12/13 common.model types
11/8/13 move log10 to dot.Util
11/8/13 Solute, Solvent, Solution model elements
11/6/13 set up basic framework for 'Solutions' and 'Custom' screens
11/6/13 created repo